[MS-1514] Fix App Store button visibility in dark theme browser

--- a/src/sass/atom/button.scss
+++ b/src/sass/atom/button.scss
@@ -49,6 +49,8 @@
 }
 
 .ms-btn-apple {
+    color-scheme: only light;
+
     img {
         width: 150px;
         height: 50px;
